--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -34,10 +34,10 @@ ORDER: Base + typography > general layout + grid > page layout > components
 */
 @mixin respond($breakpoint) {
     @if $breakpoint == phone {
-        @media only screen and (max-width: 37.5em) { @content };    //600px
+        @media only screen and (max-width: 37.5em) { @content };    //600px  // @content კოდის ბლოკის მიღება შეუძლია. არ ჭირდება ფრჩხილებით გადმოცემა
     }
     @if $breakpoint == tab-port {
-        @media only screen and (max-width: 56.25em) { @content };     //900px
+        @media only screen and (max-width: 56.25em) { @content };     //900px  only screen ნიშნავს რომ მარტო მონიტორზე ეკრანზე იმოქმედოს ამან და მაგალითად ბეჭდვისას არა
     }
     @if $breakpoint == tab-land {
         @media only screen and (max-width: 75em) { @content };    //1200px
