--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,5 +1,4 @@
 
-
 * , /*  varskvlavi aris universal selector i. vela obieqts am gverdze daamatebs am css ebs */
 *::after,
 *::before {   
@@ -8,8 +7,35 @@
     box-sizing: inherit;  /*inherit nishnavs rom es box-sizing _i mshobeli elementidan aiRebs box-sizing _is mnishvnelobas */
 }
 
-/* set global font size , root font size*/
+
 html {
-  font-size: 62.5%;
+  /* set global font size , root font size*/
+  // This defines what 1rem is
+  font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
+
+  @include respond(tab-land) { // width < 1200?
+      font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+  }
+
+  @include respond(tab-port) { // width < 900?
+      font-size: 50%; //1 rem = 8px, 8/16 = 50%
+  }
+  
+  @include respond(big-desktop) {
+      font-size: 75%; //1rem = 12, 12/16
+  }
 }
 
+body {
+  box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+      padding: 0;
+  }
+}
+
+::selection {
+  background-color: $color-primary;
+  color: $color-white;
+}
