--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,8 +12,28 @@
     position: relative;
 
     /*  amiti am class matrkutxedidan gadavaqcevT trapeciad . kargi resursi https://bennettfeely.com/clippy/ */
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100% );
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100% );
+    height: 95vh;
+    }
+
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),  /* ეს მძიმე ნიშნავს or_ს, ბევრი პირობის გამოყენების საშუალებაა */
+            only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), /* safari support */
+            only screen and (min-width: 125em) {
+        background-image: linear-gradient(
+            to right bottom,
+            rgba($color-primary-light, 0.8),
+            rgba($color-primary-dark, 0.8)),
+        url(../img/hero.jpg);
+    }
+
+
+    // პოლოგონს ჩამოჭრის კუთხეს უცვლით თუ მცირე ეკრანია
+    @include respond(phone) {
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
 
     // & es nishani akopirebs clasis saxels .header
     &__logo-box {
